service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisgui
  namespace: odoo
  labels:
    app: redisgui
spec:
  ports:
    - port: 80
  selector:
    app: redisgui
