ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: redisgui
  name: redisgui
  namespace: odoo
spec:
  ingressClassName: nginx-controller
  rules:
  - host: redis.qzhub.net
    http:
      paths:
      - path: /
        backend:
          serviceName: redisgui
          servicePort: 80
